# object-triggered-3D-SLAM

./: .gitignore  README.md
3d_model/: _reconstruct_rgbd.py  check_one_frame.py  depth_scale.py  depth_visual.py  multi_reconstruct_rgbd_filter.py  reconstruct_rgbd.py  reconstruct_rgbd_filter.py  reconstruct_rgbd_gt.py  visualize_trajectory.py
3d_model/object_scan/poses/: Object_0_1.txt  Object_0_2.txt  Object_0_3.txt  Object_1_3.txt  Object_2_2.txt  Object_3_1.txt  box1_pose_0000.txt  box1_pose_0001.txt  box1_pose_0002.txt  box1_pose_0003.txt  center_table_pose_0000.txt  center_table_pose_0001.txt  center_table_pose_0002.txt  center_table_pose_0003.txt  gt_pose_0000.txt  gt_pose_0001.txt  gt_pose_0002.txt  gt_pose_0003.txt  pose_0000.txt  pose_0001.txt  pose_0002.txt  pose_0003.txt  pose_0004.txt
3d_model/object_scan_2/3d_reconst/: object_reconst.ply
3d_model/object_scan_2/poses/: Object_0_1.txt  Object_0_2.txt  Object_0_3.txt  Object_0_4.txt  Object_1_1.txt  Object_1_2.txt  Object_1_4.txt  Object_2_1.txt  Object_2_2.txt  Object_2_3.txt  Object_2_4.txt  Object_2_5.txt  Object_2_6.txt  Object_2_8.txt  Object_3_2.txt  entrance_0003.txt  kitchen_point_0001.txt  living_chair_0002.txt
3d_model/object_scan_3/poses/: Object_1_2.txt  Object_1_3.txt  Object_1_4.txt
3d_model/object_scan_multi_1/poses/: Object_0_1.txt  Object_0_10.txt  Object_0_11.txt  Object_0_12.txt  Object_0_13.txt  Object_0_14.txt  Object_0_15.txt  Object_0_16.txt  Object_0_17.txt  Object_0_18.txt  Object_0_19.txt  Object_0_2.txt  Object_0_20.txt  Object_0_21.txt  Object_0_22.txt  Object_0_23.txt  Object_0_24.txt  Object_0_25.txt  Object_0_26.txt  Object_0_27.txt  Object_0_28.txt  Object_0_29.txt  Object_0_3.txt  Object_0_30.txt  Object_0_31.txt  Object_0_32.txt  Object_0_33.txt  Object_0_34.txt  Object_0_35.txt  Object_0_36.txt  Object_0_37.txt  Object_0_38.txt  Object_0_39.txt  Object_0_4.txt  Object_0_40.txt  Object_0_41.txt  Object_0_42.txt  Object_0_43.txt  Object_0_44.txt  Object_0_45.txt  (+17 more)
3d_model/object_scan_multi_2/poses/: Object_0_1.txt  Object_0_10.txt  Object_0_11.txt  Object_0_12.txt  Object_0_13.txt  Object_0_14.txt  Object_0_15.txt  Object_0_16.txt  Object_0_17.txt  Object_0_18.txt  Object_0_19.txt  Object_0_2.txt  Object_0_20.txt  Object_0_21.txt  Object_0_22.txt  Object_0_23.txt  Object_0_24.txt  Object_0_25.txt  Object_0_26.txt  Object_0_27.txt  Object_0_28.txt  Object_0_29.txt  Object_0_3.txt  Object_0_30.txt  Object_0_31.txt  Object_0_32.txt  Object_0_33.txt  Object_0_34.txt  Object_0_35.txt  Object_0_36.txt  Object_0_37.txt  Object_0_38.txt  Object_0_39.txt  Object_0_4.txt  Object_0_40.txt  Object_0_41.txt  Object_0_42.txt  Object_0_43.txt  Object_0_44.txt  Object_0_45.txt  (+14 more)
3d_model/object_scan_multi_3/poses/: Object_0_1.txt  Object_0_10.txt  Object_0_11.txt  Object_0_12.txt  Object_0_13.txt  Object_0_14.txt  Object_0_15.txt  Object_0_16.txt  Object_0_17.txt  Object_0_18.txt  Object_0_19.txt  Object_0_2.txt  Object_0_20.txt  (+35 more)
eval/: result_plot.py
eval/eval_cardboard/: eval_cardboard.py
eval/eval_cone/: eval_cone.py
eval/eval_table_chair/: eval_table_chair.py
eval_gt/: align_and_evaluate.py  gt_compare.py  size_check.py
eval_gt/eval_cone/: eval_cone.py
eval_gt/eval_table_chair/: eval_table_chair.py
eval_gt/world/: cardboard_table_chairs_cones_room.world
eval_rtab/: z_threshold.py
eval_rtab/eval_cardboard/: eval_cardboard.py
eval_rtab/eval_cone/: eval_cone.py
eval_rtab/eval_table_chair/: eval_rtab_gt_table.py  eval_table_chair.py
fusion/: 2_2d_selective_merge.py  2d_merge_maps.py  2d_selective_merge.py  _2d_merge_maps.py  hybrid_map.py  hybrid_map_manual.py
fusion/hybrid_maps/: hybrid_map_1.ply  hybrid_map_2.ply  hybrid_map_4.ply
ros2_ws/src/lidar_detection/: CMakeLists.txt  package.xml
ros2_ws/src/lidar_detection/launch/: 2_virtual_lidar_navigation.launch.py  3_virtual_lidar_navigation.launch.py  _lidar_all_launch.launch.py  lidar_navigation.launch.py  multi_lidar_navigation.launch.py  object_nav_pipeline.lanuch.py  spawn_four_wheel.launch.py  virtual_lidar_navigation.launch.py
ros2_ws/src/lidar_detection/src/: 1_lidar_object_detection.cpp  1_object_goal_selector.cpp  1_room_shape_estimator.cpp  1_send_goal_node.cpp  1_visiting_point_selector.cpp  2_multi_object_goal_selector.cpp  2_multi_send_goal_node.cpp  2_object_goal_selector.cpp  2_room_shape_estimator.cpp  2_send_goal_node.cpp  2_visiting_point_selector.cpp  2lidar_cluster_publisher.cpp  3_lidar_object_detection.cpp  3_multi_object_goal_selector.cpp  3_multi_send_goal_node.cpp  3_object_goal_selector.cpp  3_send_goal_node.cpp  4_lidar_object_detection.cpp  4_object_goal_selector.cpp  4_send_goal_node.cpp  5_lidar_object_detection.cpp  5_object_goal_selector.cpp  5_send_goal_node.cpp  6_lidar_cluster_publisher.cpp  6_object_goal_selector.cpp  6_send_goal_node.cpp  7_lidar_cluster_publisher.cpp  7_object_goal_selector.cpp  8_lidar_cluster_publisher.cpp  diff_node.cpp  lidar_cluster_publisher.cpp  multi_object_goal_selector.cpp  multi_send_goal_node.cpp  object_filter.cpp  object_goal_selector.cpp  removed_object_goal_selector.cpp  send_goal_node.cpp  virtual_lidar_cluster_publisher.cpp
ros2_ws/src/lidar_detection/urdf/: bno055_imu.xacro  camera.xacro  four_wheel_2d.urdf  four_wheel_2d.urdf.xacro  four_wheel_drive_gazebo.xacro  lidar2d.xacro
ros2_ws/src/lidar_detection/worlds/: lidar_test.world  test_room.world
ros2_ws/src/rgbd_capture/: CMakeLists.txt  package.xml
ros2_ws/src/rgbd_capture/src/: _rgbd_capture_node.cpp  rgbd_capture_node_2.cpp  rgbd_capture_node_gt.cpp
ros2_ws/src/rgbd_scan/: CMakeLists.txt  package.xml
ros2_ws/src/rgbd_scan/src/: scan_node.cpp
ros2_ws/src/rtab_3d_scan/: CMakeLists.txt  package.xml
ros2_ws/src/rtab_3d_scan/launch/: rtabmap.launch.py
ros2_ws/src/system_manager/: CMakeLists.txt  package.xml
ros2_ws/src/system_manager/include/system_manager/: goal_list.hpp
ros2_ws/src/system_manager/launch/: manager_scan.launch.py
ros2_ws/src/system_manager/src/: 3_manager_node.cpp  4_manager_node.cpp  manager_node.cpp  manager_node_2.cpp  scanner_node.cpp
(+111 files in other folders)
